--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,12 +36,19 @@
                     android:fontFamily="cursive"
                     />
                 <TextView
+                    android:id="@+id/tvUsername"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:textSize="30dp"
                     android:text="{USERNAME}"
                     />
+                <ImageButton
+                    android:id="@+id/ibLogout"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:contentDescription="TODO"
+                    android:src="@drawable/logout_24" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -65,12 +72,13 @@
                     android:id="@+id/tvCartItemNumbers"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
                     android:text="0"
                     android:textColor="@color/white"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintHorizontal_bias="0.111"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
-                    tools:layout_editor_absoluteY="5dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
             
