--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,15 +85,27 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
         
         <!-- SEARCH BAR -->
-        <EditText
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:background="@drawable/rounded_edittext"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:padding="10dp"
-            android:layout_marginTop="10dp"
-            android:hint="Search"
-            />
+            android:layout_gravity="center">
+            <EditText
+                android:id="@+id/etSearch"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:background="@drawable/rounded_edittext"
+                android:hint="Search"
+                />
+            <ImageButton
+                android:id="@+id/ibSearch"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/search_24"
+                />
+        </LinearLayout>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.recyclerview.widget.RecyclerView
