feat: Cart functioning :) & and cart save after logout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,9 +52,8 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="50dp"
+                android:layout_width="190dp"
                 android:layout_height="50dp"
-                android:layout_marginLeft="100dp"
                 android:clickable="true">
 
                 <ImageView
@@ -64,14 +63,14 @@
                     android:src="@drawable/cart_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintHorizontal_bias="0.391"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tvCartItemNumbers"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="71dp"
+                    android:layout_height="20dp"
                     android:layout_marginTop="4dp"
                     android:text="0"
                     android:textColor="@color/white"
