--- a/app/src/main/res/layout/component_cart_item_card.xml
+++ b/app/src/main/res/layout/component_cart_item_card.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:layout_marginVertical="2dp"
     android:background="@color/white">
 
     <ImageView
@@ -37,6 +38,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:text="Details"
             android:layout_gravity="center"
+            android:layout_marginLeft="2dp"
             android:textSize="16sp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
